<resources>
    <string name="home">خانه</string>
    <string name="search">جستجو</string>
    <string name="category">دسته بندی</string>
    <string name="new_item">ثبت</string>
    <string name="my_items">موارد من</string>
    <string name="app_name">مژده</string>
    <string name="select">انتخاب</string>
    <string name="title">عنوان</string>
    <string name="description">توضیحات</string>
    <string name="lost_date">تاریخ گم شدن</string>
    <string name="founded_date">تاریخ پیدا شدن</string>
    <string name="submit">ارسال</string>
    <string name="back">لغو</string>
    <string name="image">عکس</string>
    <string name="add_image">افزودن عکس</string>
    <string name="connection_error">خطا در اتصال به سرور</string>
    <string name="title_is_required">عنوان الزامی  الست</string>
    <string name="description_is_required">توضیحات الزامی است</string>
    <string name="choose_date">انتخاب تاریخ</string>
    <string name="from_camera">دوربین</string>
    <string name="select_image_from">انتخاب عکس از</string>
    <string name="from_gallery">گالری</string>
    <string name="occurred_date_is_required" >تاریخ وقوع الزامی است</string>
    <string name="category_is_required" >دسته بندی الزامی است</string>
    <string name="type">نوع</string>
    <string name="lost">گمشده</string>
    <string name="found">پیدا شده</string>
    <string name="location">محدوده</string>
    <string name="select_location"> انتخاب محل از روی نقشه</string>
    <string name="close">بستن</string>
    <string name="ok">تایید</string>
    <string name="select_province">انتخاب استان</string>
    <string name="select_city">انتخاب شهر</string>
    <string name="new_item_added_successfully">مورد جدید با موفقیت ثبت شد و پس از تایید ناظر منتشر خواهد شد</string>
    <string name="search_in">جستجو در</string>
    <string name="no_item_found">موردی یافت نشد</string>
    <string name="cell_phone_for_example">مثلا گوشی موبایل</string>
    <string name="mobile_sample">09123456789</string>
    <string name="mobile">تلفن همراه</string>
    <string name="fill_requirement">لطفا  موارد مشخص شده را تکمیل  نمایید</string>
    <string name="please_wait">لطفا شکیبا باشید</string>
    <string name="permission_camera_denied">مجوز استفاده از دوربین  داده نشد</string>
    <string name="permission_camera_neverask">showNeverAskForCamera</string>
    <string name="button_allow">اجازه میدهم</string>
    <string name="button_deny">اجازه نمی دهم</string>
    <string name="write_permission">اجازه نوشتن در حافظه</string>
    <string name="date">تاریخ</string>
    <string name="touch_to_chose_place" >برای انتخاب محل ، نقشه را لمس کنید</string>
    <string name="or">یا</string>
    <string name="location_choose_hint">در صورت امکان، محل گم شدن یا پیدا شدن را روی نقشه انتخاب کنید.</string>
    <string name="service_not_available">سرویس  تبدیل  آدرس  در دسترس نیست</string>
    <string name="invalid_lat_long_used">نقاط آدرس معتبر نیست</string>
    <string name="no_address_found">آدرسی ویدا نشد</string>
    <string name="address_found">آدرس پیدا شد</string>
    <string name="bashe">باشه</string>
    <string name="contact">تماس با</string>
    <string name="founded_address">محل  ویدا شدن</string>
    <string name="lost_address">محل گم شدن</string>
    <string name="detail">جزئیات</string>
    <string name="return1">برگشت</string>
    <string name="press_back_again_to_exit">برای  خروج دوباره  کلید Back را بزنید</string>
    <string name="android_auto_update_dialog_title">بروزرسانی مژده</string>
    <string name="android_auto_update_notify_ticker"></string>
    <string name="android_auto_update_notify_content">نسخه جدید مژده قابل دریافت است</string>
    <string name="android_auto_update_dialog_btn_download">بروزرسانی</string>
    <string name="android_auto_update_dialog_btn_cancel">بی خیال</string>
    <string name="android_auto_update_toast_no_new_update">نسخه جدیدی وجود ندارد</string>
    <string name="android_auto_update_dialog_checking">در حال بررسی برای نسخه جدید</string>
    <string name="android_auto_update_download_progress">%1$d\\%</string>
    <string name="telegram_id">تلگرام ID</string>
    <string name="email">ایمیل</string>
    <string name="enter_email">لطفا ایمیلتان را وارد کنید</string>
    <string name="login_hit">برای ادامه کار ایمیل خود را در فرم زیر وارد نمایید و دکمه انتخاب را بزنید. یک کد فعال سازی به ایمیل شما ارسال خواهد شد. لازم است کد فعال سازی را در مرحله بعدی وارد نمایید</string>
    <string name="next">ادامه</string>
    <string name="invalid_email">ایمیل معتبر نیست</string>
    <string name="enter_received_code">لطفا کد دریافت شده را وارد کنید</string>
    <string name="received_code">کد دریافت شده</string>
    <string name="invalid_password">لطفا رمز  عبور را وارد نمایید</string>
    <string name="code_sent_to_email">کد فعال سازی به ایمیل شما ارسال شد</string>
    <string name="auth_failed">ایمیل یا رمز  عبور وارد شده اشتباه است</string>
    <string name="edit">ویرایش</string>
    <string name="preview">پیش نمایش</string>
    <string name="updated_successfully">بروزرسانی با موفقیت انجام شد</string>
    <string name="message_sent_successfully">پیام شما برای ثبت کننده آگهی ارسال شد</string>
    <string name="send">ارسال</string>
    <string name="send_message_to_owner">لطفا پیام خود را برای ثبت کننده اگهی  وارد کنید و دکمه ارسال را بزنید</string>
    <string name="messages">پیام ها</string>
    <string name="no_message_registered">پیامی ثبت نشده است</string>
    <string name="login_to_accout">وارد حساب کاربری خود شوید</string>
    <string name="optional_paranthes">(اختیاری)</string>
    <string name="login_hint">برای ادامه کار لازم است وارد سیستم شوید</string>
    <string name="password">رمز  عبور</string>
    <string name="login">ورود به سیستم</string>
    <string name="register">ثبت نام</string>
    <string name="im_not_member_register">عضو نیستم. ثبت نام</string>
    <string name="confirm_password">تایید رمز عبور</string>
    <string name="register_hint">برای ثبت نام در سیستم ایمیل و رمز عبور  را وارد نمایید و دکمه ثبت نام را انتخاب کنید</string>
    <string name="password_is_not_same">رمز  عبورهای وارد شده یکسان نیست</string>
    <string name="new_user_failed">خطا در ثبت نام کاربر جدید. لطفا مجددا تلاش  نمایید</string>
    <string name="email_already_exists">ایمیل قبلا ثبت شده است</string>
</resources>
